--- a/browser/client/index.html
+++ b/browser/client/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=1024, initial-scale=1, user-scalable=no">
     <title>Nordiska Museet</title>
   </head>
   <body>
